# verdikt-sdk-python

./: .pre-commit-config.yaml  Makefile  README.md  SDK.md  main.py  pyproject.toml
.github/workflows/: pre-commit.yml  publish.yml
sdk/: __init__.py  auth.py  client.py  models.py
tests/: test_e2e.py
verdikt_sdk/: __init__.py  auth.py  client.py  http.py  models.py
