[project]
name = "evaluation-python-sdk"
version = "0.1.0"
description = "Python SDK for the Evaluation API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cachetools>=7.0.3",
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "yalc>=0.2.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.13.3",
    "pytest~=8.4.2",
    "pytest-asyncio>=1.3.0",
    "types-cachetools>=6.2.0.20251022",
]
