[project]
name = "verdikt-sdk"
version = "0.1.1"
description = "Python SDK for the Verdikt Evaluation API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.0",
    "yalc>=0.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verdikt_sdk"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.13.3",
    "pytest~=8.4.2",
    "pytest-asyncio>=1.3.0",
    "types-cachetools>=6.2.0.20251022",
    "hatchling>=1.29.0",
]

[tool.mypy]
plugins = [
    "pydantic.mypy"
]

[tool.ruff]
line-length = 88
